--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,14 @@
   </head>
   <body>
     {{content-for "body"}}
+    <script>
+        function mapError() {
+            alert("Error loading Google Maps");
+        }
+    </script>
+    <script src=
+        "https://maps.googleapis.com/maps/api/js?key=AIzaSyAekM9XVEMmw0oWbPws8F5T-4WsCNB9Tw0&libraries=geometry&v=3" onerror="mapError()">
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
